updated scripts for heroku

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -w",
+    "postinstall": "npm run webpack",
+    "start": "node server.js",
     "webpack": "./node_modules/webpack/bin/webpack.js",
     "start:dev": "npm run webpack -- --watch --mode=development & DATABASE_URL=postgres://localhost:5432/acmecrud nodemon server/index.js --ignore src/ --ignore dist"
   },
